--- a/CMCS/Views/UserAccount/UpdateUserProfile.cshtml
+++ b/CMCS/Views/UserAccount/UpdateUserProfile.cshtml
@@ -25,10 +25,7 @@
 
         document.getElementById("btnUpdateAccount").disabled = true;
 
-        document.getElementById("main-screen").style.position = "absolute";
-        document.getElementById("main-footer").style.position = "fixed";
-        document.getElementById("loading-screen").style.top = ((window.innerHeight / 2) - (window.innerHeight / 4)) + window.scrollY + "px";
-        document.getElementById("loading-screen").hidden = false;
+        showLoadingScreen();
 
         // Get data from the request.
         GET_DATA("/UserAccount/UpdateUserProfile", [["ActionName", "GetUserAccountData"]], function(status, response) {
@@ -69,10 +66,7 @@
                 }
 
                 document.getElementById("btnUpdateAccount").disabled = false;
-
-                document.getElementById("main-screen").style.position = "relative";
-                document.getElementById("main-footer").style.position = EMPTY_STRING;
-                document.getElementById("loading-screen").hidden = true;
+                hideLoadingScreen();
             }
         });
 
@@ -355,9 +349,7 @@
                     if (documentsRead == (uploadedQualificationDocuments.length + uploadedIdentityDocuments.length)) {
                         // Post data
                         POST_DATA2("/UserAccount/UpdateUserProfile", JSON.stringify(userData), [["ActionName", "UpdateAccount"]], function (status) {
-                            document.getElementById("main-screen").style.position = "relative";
-                            document.getElementById("main-footer").style.position = EMPTY_STRING;
-                            document.getElementById("loading-screen").hidden = true;
+                            showLoadingScreen();
                             
                             // Check if the status is OK and the role is 'Lecturer'.
                             if (status == 1 && role == "Lecturer") {
