--- a/CMCS/Views/UserAccount/UserLogin.cshtml
+++ b/CMCS/Views/UserAccount/UserLogin.cshtml
@@ -69,7 +69,7 @@
             <table style="width: 400px" cellpadding="4">
                 <tr>
                     <td>
-                        <b>User ID:</b>
+                        <b>Identity Number:</b>
                     </td>
                     <td>
                         @{
