Project Update. Version: 1.2: Loading Screen improved.

--- a/CMCS/Views/Home/Status.cshtml
+++ b/CMCS/Views/Home/Status.cshtml
@@ -49,7 +49,8 @@
 
                         <ul>
                             <li>The user account already exists.</li>
-                            <li>The user's password does not follow the CMCS password criteria.</li>
+                            <li>The user's password does not follow the CMCS password criteria.<br />
+                                <b>CMCS Password Criteria:</b> A minimum of eight characters that includes four alphabetical letters, two numbers and two special symbols.</li>
                             <li>The user did not complete all the required fields.</li>
                         </ul>
                     </p>
@@ -82,9 +83,6 @@
                             <li>The user account does not exist.</li>
                             <li>The password is incorrect.</li>
                         </ul>
-
-                        The 'User ID' field is your Identity Number that you provided when you registered.<br />
-                        The 'Password' field is your password that you set for your user account.
                     </p>
                 </div>
                 <br />
