--- a/CMCS/Views/UserAccount/UserForgotPassword.cshtml
+++ b/CMCS/Views/UserAccount/UserForgotPassword.cshtml
@@ -228,8 +228,8 @@
     <!-- Step 1 -->
     <div id="page1" style="width: 640px; background-color: white">
         <br />
-        <b>Step 1: Enter your User ID:</b><br /><br />
-        <b>User ID: </b><input type="text" id="txtUserID" style="width: 200px" /><br />
+        <b>Step 1: Enter your Identity Number:</b><br /><br />
+        <b>Identity Number: &nbsp;</b><input type="text" id="txtUserID" style="width: 200px" /><br />
         <br />
         <hr />
         <button class="button-class button-class-small2" onclick="NextPage()">Next</button>
