--- a/CMCS/Views/Shared/_Layout.cshtml
+++ b/CMCS/Views/Shared/_Layout.cshtml
@@ -72,19 +72,27 @@
                 @RenderBody()
             </main>
         </div>
-        <div hidden align="center" id="loading-screen" style="position: absolute; z-index: 1; width: 100%; height: 50%; background-color: rgba(0, 0, 0, 0.8);">
-
-            <table style="height: 100%;">
-                <tr>
-                    <td style="vertical-align: central">
+        <div hidden id="loading-screen" style="position: absolute; z-index: 1; width: 100%; height: 50%; background-color: rgba(0, 0, 0, 0.8);">
+            <table style="background-color: rgba(50, 50, 50, 0.2); width: 100%; height: 100%;">
+                <tr style="height: 5%; background-color: rgb(60, 0, 0)">
+                    <td></td>
+                </tr>
+                <tr style="height: 90%">
+                    <td style="vertical-align: central; background-image: url('/images/background2.png'); background-size: 3%">
+                        <div align="center" style="color: white">
                         <img src="~/images/loading-icon.gif" style="height: 200px" />
                         <br />
                         <br />
-                        <p style="text-align: center"><h4 style="color: white">Loading, please wait...</h4></p>
+                        <p style="text-align: center"><h4>Loading, please wait...</h4></p>
+                        </div>
                     </td>
+                </tr>
+                <tr style="height: 5%; background-color: rgb(60, 0, 0)">
+                    <td></td>
                 </tr>
             </table>
         </div>
+    </div>
     </div>
 
     <footer id="main-footer" class="border-top footer">
