Project Update. Version: 1.7

--- a/CMCS/Views/Home/Index.cshtml
+++ b/CMCS/Views/Home/Index.cshtml
@@ -51,7 +51,14 @@
                             {
                                 if (CMCSMain.User.IsManager)
                                 {
-                                    <button class="button-class" onclick="window.location = '/Request/ManageRequests';">Start Now</button>
+                                    if (!CMCSMain.User.HR_Login)
+                                    {
+                                        <button class="button-class" onclick="window.location = '/Request/ManageRequests';">Start Now</button>
+                                    }
+                                    else
+                                    {
+                                        <button class="button-class" onclick="window.location = '/Request/HR_View';">Start Now</button>
+                                    }
                                 }
                                 else
                                 {
